@@ -11,7 +11,6 @@ import org.demo.documentation.widgets.groupinghierarhy.base.allfields.enums.Cust
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 @Service
 public class MyExample3202Meta extends FieldMetaBuilder<MyExample3202DTO> {
@@ -64,7 +63,7 @@ public class MyExample3202Meta extends FieldMetaBuilder<MyExample3202DTO> {
         fields.enableFilter(MyExample3202DTO_.customFieldRadio);
         fields.setConcreteFilterValues(MyExample3202DTO_.customFieldMultipleSelect, Arrays.stream(CustomFieldMultipleSelectEnum.values())
                 .map(en -> new SimpleDictionary(en.name(), en.getValue()))
-                .collect(Collectors.toList()));
+                .toList());
         fields.enableFilter(MyExample3202DTO_.customFieldMultipleSelect);
         fields.enableFilter(MyExample3202DTO_.customFieldMultivalue);
         fields.enableFilter(MyExample3202DTO_.customFieldMultivalueHover);
