@@ -13,7 +13,6 @@ import org.demo.documentation.widgets.list.customizationcolumns.enums.CustomFiel
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 @Service
 public class MyExample3135Meta extends FieldMetaBuilder<MyExample3135DTO> {
@@ -64,7 +63,7 @@ public class MyExample3135Meta extends FieldMetaBuilder<MyExample3135DTO> {
         fields.enableFilter(MyExample3135DTO_.customFieldMultivalueHover);
         fields.setConcreteFilterValues(MyExample3135DTO_.customFieldMultipleSelect, Arrays.stream(CustomFieldMultipleSelectEnum1.values())
                 .map(en -> new SimpleDictionary(en.name(), en.getValue()))
-                .collect(Collectors.toList()));
+                .toList());
         fields.enableFilter(MyExample3135DTO_.customFieldMultipleSelect);
         fields.enableFilter(MyExample3135DTO_.customFieldMultivalue);
         fields.enableFilter(MyExample3135DTO_.customFieldText);
@@ -80,7 +79,7 @@ public class MyExample3135Meta extends FieldMetaBuilder<MyExample3135DTO> {
         fields.enableFilter(MyExample3135DTO_.customFieldRadio);
         fields.setConcreteFilterValues(MyExample3135DTO_.customFieldMultipleSelect, Arrays.stream(CustomFieldMultipleSelectEnum.values())
                 .map(en -> new SimpleDictionary(en.name(), en.getValue()))
-                .collect(Collectors.toList()));
+                .toList());
         fields.enableFilter(MyExample3135DTO_.customFieldMultipleSelect);
         fields.enableFilter(MyExample3135DTO_.customFieldMultivalue);
         fields.enableFilter(MyExample3135DTO_.customFieldMultivalueHover);
